kubernetes/main/apps/web/archiveteam-warrior/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: archiveteam-warrior
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: archiveteam-warrior

  egress:
    - toEntities:
        - world # FIXME: narrow this once we know where it's calling
